<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DialogBaseActivity">

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:textColor="#000"
        android:textSize="25sp"
        app:layout_goneMarginTop="20dp" />

    <Button
        android:id="@+id/launch_dialog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LAUNCH DIALOG"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_text_view"
        android:layout_marginTop="30dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
